--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,50 @@
+
 .intro-overlay {
-  z-index: 1;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  max-width: 320px;
+  position: relative;
+  align-content: center;
+  margin: auto;
   box-sizing: border-box;
-  padding: 1.5em;
   color: #FFF;
   background: rgba(0, 0, 0, 0.75);
-  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  margin-right: -50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+.card-img-top {
+  padding-left:20%;
+  width: 70%;
+}     
+.card {
+  box-sizing: border-box;
+  top: 0%;
+  left: 0%;
+  color: #FFF;
+  background: rgba(0, 0, 0, 0.75);
+  margin-right: 0%;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
+.play-overlay {
+  z-index: 99999;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  box-sizing: border-box;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  padding: 12px 24px;
+  padding-bottom: 0px;
+  background: rgba(0, 123, 255) url(./assets/images/white-play-256.png) center no-repeat;
+  background-size: 40px 40px;
+}
+.play-overlay:hover {
+  background: rgba(0, 0, 0, 0.2) url(./assets/images/white-play-256.png) center no-repeat;
+  background-size: 40px 40px;
+}
+
 .menu-overlay {
   z-index: 99999;
   position: fixed;
@@ -29,4 +62,48 @@
 .menu-overlay:hover {
   background: rgba(0, 0, 0, 0.2) url(./assets/images/hamburger-white.png) center no-repeat;
   background-size: 40px 40px;
+}
+a {
+  text-decoration: none;
+
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #007BFF;
+  color: #ddd;
+}
+.next{
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  top: 30%;
+  left: 92%;
+  border-radius: 50%;
+  padding: 12px 24px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  background: rgba(0, 0, 0, 0.5) url(./assets/images/nextArrow.png) center no-repeat;
+  background-size:  22.5px 22.5px;
+ 
+}
+.previous{
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  top: 30%;
+  left: 8%;
+  border-radius: 50%;
+  padding: 12px 24px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  background: rgba(0, 0, 0, 0.5) url(./assets/images/previousArrow.png) center no-repeat;
+  background-size:  22.5px 22.5px;
+
 }
