--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,16 @@
   margin: auto;
   box-sizing: border-box;
   color: #FFF;
-  background: rgba(0, 0, 0, 0.75);
+  background: #000000;
   margin-right: -50%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+html, body { background-color:#ddd }
 .card-img-top {
-  padding-left:20%;
-  width: 70%;
+
+  width: 100%;
 }     
 .card {
   box-sizing: border-box;
@@ -21,16 +22,17 @@
   left: 0%;
   color: #FFF;
   background: rgba(0, 0, 0, 0.75);
-  margin-right: 0%;
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
+  margin-top: 2%;
+  margin-left: 25%;
+  height: 93vh;
+  width: 50%;
+
 }
 .play-overlay {
   z-index: 99999;
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 50px;
+  right: 28%;
   box-sizing: border-box;
   width: 60px;
   height: 60px;
