--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
-
+.checklist {
+  position: absolute;
+  width: 300px;
+  height: 50px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 99999;   
+}
 .menu-overlay {
   z-index: 99999;
   position: fixed;
