--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
   left: 20px;
   z-index: 99999;   
 }
+.checklist-text{
+  color:rgb(231, 231, 112); text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 .menu-overlay {
   z-index: 99999;
   position: fixed;
