--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,27 @@ a:hover {
   background-size:  22.5px 22.5px;
  
 }
+.nextRect{
+  position: absolute;
+  width: 30%;
+  height: 100%;
+  top: 0%;
+  left: 80%;
+  font-size: 16px;
+  background: rgba(0, 0, 0, 0) center no-repeat;
+  background-size:  22.5px 22.5px;
+}
+.previousRect{
+  position: absolute;
+  width: 18%;
+  height: 100%;
+  top: 0%;
+  left: 0%;
+  font-size: 16px;
+  background: rgba(0, 0, 0, 0.1) center no-repeat;
+  background-size:  22.5px 22.5px;
+}
+
 .previous{
   position: absolute;
   width: 45px;
