--- a/assets/styles/mobile-styles.css
+++ b/assets/styles/mobile-styles.css
@@ -20,6 +20,6 @@
     border-radius: 50%;
     padding: 12px 24px;
     padding-bottom: 0px;
-    background: rgba(0, 123, 255) url(./assets/images/white-play-256.png) center no-repeat;
+    background: rgba(0, 123, 255) url(../images/white-play-256.png) center no-repeat;
     background-size: 40px 40px;
   }
