--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,6 +10,47 @@
 .checklist-text{
   color:rgb(231, 231, 112); text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+.scanningSpinner {
+	margin: 100px auto;
+	height: 40px;
+	text-align: center;
+}
+.scanningSpinner label {
+	display: block;
+	color: #333;
+	font-size: 200%;
+}
+.scanningSpinner > div {
+	background-color: #333;
+	height: 100%;
+	width: 6px;
+	display: inline-block;
+	
+	-webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+	animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+.scanningSpinner .rect2 {
+	-webkit-animation-delay: -1.1s;
+	animation-delay: -1.1s;
+}
+.scanningSpinner .rect3 {
+	-webkit-animation-delay: -1.0s;
+	animation-delay: -1.0s;
+}
+@-webkit-keyframes sk-stretchdelay {
+	0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+	20% { -webkit-transform: scaleY(1.0) }
+}
+@keyframes sk-stretchdelay {
+	0%, 40%, 100% { 
+		transform: scaleY(0.4);
+		-webkit-transform: scaleY(0.4);
+		}
+	20% { 
+		transform: scaleY(1.0);
+		-webkit-transform: scaleY(1.0);
+	}
+}
 .menu-overlay {
   z-index: 99999;
   position: fixed;
