--- a/lib/styles/mobile-styles.css
+++ b/lib/styles/mobile-styles.css
@@ -23,3 +23,17 @@
     background: rgba(0, 123, 255) url(../../assets/images/white-play-256.png) center no-repeat;
     background-size: 40px 40px;
   }
+  .back-overlay {
+    z-index: 99999;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    box-sizing: border-box;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    padding: 12px 24px;
+    padding-bottom: 0px;
+    background: rgba(0, 123, 255) url(../../assets/images/white-play-256-back.png) center no-repeat;
+    background-size: 40px 40px;
+  }
