--- a/lib/styles/styles.css
+++ b/lib/styles/styles.css
@@ -117,6 +117,25 @@
   background-size: 40px 40px;
 }
 
+.back-overlay {
+  z-index: 99999;
+  position: fixed;
+  bottom: 50px;
+  left: 28%;
+  box-sizing: border-box;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  padding: 12px 24px;
+  padding-bottom: 0px;
+  background: rgba(0, 123, 255) url(../../assets/images/white-play-256-back.png) center no-repeat;
+  background-size: 40px 40px;
+}
+.back-overlay:hover {
+  background: rgba(0, 0, 0, 0.2) url(../../assets/images/white-play-256-back.png) center no-repeat;
+  background-size: 40px 40px;
+}
+
 a {
   text-decoration: none;
 
